--- a/UserList.html
+++ b/UserList.html
@@ -54,10 +54,25 @@
     <p id="popupDescription"></p>
     <button class="close-btn" onclick="closePopup()">Close</button>
 </div>
+
+<div id="heartPopup" class="heart-popup" style="display: none;">
+    <!-- Pop-up content will be dynamically injected here -->
+</div>
+
+<div id="busyPopup" class="heart-popup" style="display: none;">
+    <div class="popup-content">
+        <button class="close-btn" onclick="closeBusyPopup()">×</button>
+        <div class="popup-message">
+            <span>🚀</span>
+            <h2>They're Busy, try again later</h2>
+        </div>
+    </div>
+</div>
     
 <script>
     const currentUserProfile = {
         name: "Alex",
+        img: "ProfileAlex.jpg", // Add the current user image here
         interests: ["Hiking", "Reading", "Cooking"],
         hobbies: ["Photography", "Traveling"],
         profession: "Software Engineer"
@@ -70,17 +85,7 @@
         { name: "James" , description: "Likes watching movies and running" , interests:["Movies" , "Running" , "Fitness"] , hobbies: ["Star Wars" , "Running"], profession: "Business Analyst" , img: "Profile1.jpg"},
         { name: "Cameron", description: "Tech enthusiast and coder.", interests: ["Programming", "Gaming", "Music"], hobbies: ["Robotics", "3D Printing"], profession: "Software Developer", img: "Profile1.jpg" },
         { name: "Charlie", description: "Fitness freak and health coach.", interests: ["Fitness", "Cooking", "Meditation"], hobbies: ["Yoga", "Cycling"], profession: "Personal Trainer", img: "Profile2.jpg" },
-        { name: "Peyton", description: "Creative artist and designer.", interests: ["Painting", "Design", "Photography"], hobbies: ["Sketching", "Traveling"], profession: "Graphic Designer", img: "Profile1.jpg" },
-    ];
-
-    const friendUserProfiles = [
-        { name: "Riley", description: "Enjoys photography and music.", interests: ["Photography", "Music", "Cooking"], hobbies: ["Traveling", "Writing"], profession: "Photographer", img: "Profile3.jpg" },
-        { name: "Jordan", description: "Loves painting and hiking.", interests: ["Painting", "Hiking", "Traveling"], hobbies: ["Cooking", "Music"], profession: "Artist", img: "Profile3.jpg" },
-        { name: "Parker", description: "Passionate about traveling and cooking.", interests: ["Traveling", "Cooking", "Music"], hobbies: ["Hiking", "Painting"], profession: "Chef", img: "Profile1.jpg" },
-        { name: "Alexis", description: "Pet lover and volunteer.", interests: ["Animal Rescue", "Reading", "Traveling"], hobbies: ["Dog Walking", "Gardening"], profession: "Veterinarian", img: "Profile3.jpg" },
-        { name: "Finley", description: "Outdoor explorer and trekker.", interests: ["Trekking", "Photography", "Bird Watching"], hobbies: ["Traveling", "Writing"], profession: "Travel Blogger", img: "Profile3.jpg" },
-        { name: "Logan", description: "History buff and museum goer.", interests: ["History", "Museums", "Reading"], hobbies: ["Antiquing", "Genealogy"], profession: "Historian", img: "Profile2.jpg" },
-        { name: "Parker", description: "Techie and gadget lover.", interests: ["Technology", "Gaming", "Music"], hobbies: ["Building PCs", "Drone Flying"], profession: "IT Specialist", img: "Profile2.jpg" }
+        { name: "Peyton", description: "Creative artist and designer.", interests: ["Painting", "Design", "Photography"], hobbies: ["Sketching", "Traveling"], profession: "Graphic Designer", img: "Profile1.jpg" }
     ];
 
     const heartState = {}; // To track heart icon state
@@ -99,10 +104,71 @@
         if (!heartState[profileName]) {
             heartState[profileName] = true;
             heart.classList.add('filled');
+            if (profileName === 'Morgan' || profileName === 'Peyton') {
+                showHeartPopup(profileName);
+            }
         } else {
             heartState[profileName] = false;
             heart.classList.remove('filled');
         }
+    }
+
+    function showHeartPopup(name) {
+    const profile = otherUserProfiles.find(profile => profile.name === name);
+    const heartPopup = document.getElementById('heartPopup');
+    heartPopup.innerHTML = `
+        <div class="popup-content">
+            <button class="close-btn" onclick="closeHeartPopup()">×</button>
+            <div class="popup-users">
+                <div class="user-profile">
+                    <img id="currentUserImg" src="${currentUserProfile.img}" alt="Current User Photo">
+                    <h2 id="currentUserName">${currentUserProfile.name}</h2>
+                </div>
+                <div class="heart-icon">❤️</div>
+                <div class="user-profile">
+                    <img id="targetUserImg" src="${profile.img}" alt="${profile.name}'s Photo">
+                    <h2>${profile.name}</h2>
+                </div>
+            </div>
+            <div>
+                <button class="btn-custom" onclick="${name === 'Peyton' ? 'meetAtBar2()' : 'meetAtBar()'}">Meet at the bar?</button>
+                <button class="btn-custom" onclick="later()">Later</button>
+            </div>
+        </div>
+    `;
+    heartPopup.style.display = 'flex';
+}
+    function closeHeartPopup() {
+        document.getElementById('heartPopup').style.display = 'none';
+    }
+
+    function meetAtBar() {
+        window.location.href = 'MatchesList.html';
+        // Simulate clicking invite button (can be adjusted based on actual functionality)
+        localStorage.setItem("inviteClicked", "Morgan");
+    }
+
+    function meetAtBar2() {
+        closeHeartPopup();
+        showBusyPopup(); // Show the busy pop-up
+    }
+
+    function showBusyPopup() {
+        const busyPopup = document.getElementById('busyPopup');
+        busyPopup.style.display = 'flex';
+    }
+
+    function closeBusyPopup() {
+        const busyPopup = document.getElementById('busyPopup');
+        busyPopup.style.display = 'none';
+    }
+
+    function closeHeartPopup() {
+    document.getElementById('heartPopup').style.display = 'none';
+}
+
+    function later() {
+        closeHeartPopup();
     }
 
     function toggleFriendMode() {
