--- a/bar_info_page.html
+++ b/bar_info_page.html
@@ -182,6 +182,7 @@
     <style>
         body {
             margin: 0;
+            padding: 0;
             font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
@@ -210,12 +211,36 @@
             font-weight: bold;
         }
 
+        .logo-img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            /* Makes the container circular */
+            overflow: hidden;
+            /* Hides overflow to keep the image within the circle */
+            margin-bottom: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #3498db;
+            /* Optional: background color for when image is loading */
+        }
+
+        .logo-img img {
+            width: 100%;
+            height: auto;
+            /* Maintain aspect ratio */
+            display: flex;
+            align-items: center;
+            /* Removes any whitespace below the image */
+        }
+
         .image {
             /* height: 400px;
-            width: 100%;
-            margin-bottom: 20px;
-            background-size: cover;
-            background-position: center; */
+                width: 100%;
+                margin-bottom: 20px;
+                background-size: cover;
+                background-position: center; */
             width: 400px;
             /* Set the width you want */
             height: 200px;
@@ -257,15 +282,17 @@
 <body>
     <div class="container">
         <!-- Circle Logo -->
-        <div class="logo">Logo</div>
+        <div class="logo-img">
+            <img id="logoImage" src="" alt="Bar Logo">
+        </div>
 
 
         <!-- Bar Info -->
         <!-- <div class="bar-info" id="barInfo">
-            <h2 id="barName"></h2>
-            <p><strong>People Count:</strong> <span id="barPplCount"></span></p>
-            <p><strong>Logo:</strong> <span id="barLogo"></span></p>
-        </div> -->
+                <h2 id="barName"></h2>
+                <p><strong>People Count:</strong> <span id="barPplCount"></span></p>
+                <p><strong>Logo:</strong> <span id="barLogo"></span></p>
+            </div> -->
 
 
         <!-- Image -->
@@ -274,8 +301,7 @@
 
 
         <!-- Check In Button -->
-        <button id="checkInButton" class="check-in-button" onclick="window.location.href='UserList.html'" >Check In</button>
-     
+        <button id="checkInButton" class="check-in-button">Check In</button>
 
         <!-- Bar List -->
         <div class="bar-list" id="barList"></div>
@@ -299,6 +325,7 @@
             if (bar) {
                 //const barInfo = document.getElementById('barInfo');
                 const imageDiv = document.getElementById('image');
+                document.getElementById('logoImage').src = bar.logoURL;
 
                 // Display the image
                 imageDiv.style.backgroundImage = `url("${bar.imageURL}")`;
@@ -313,6 +340,9 @@
             } else {
                 document.getElementById('barInfo').innerHTML = '<p>Bar not found.</p>';
             }
+            document.getElementById('checkInButton').addEventListener('click', () => {
+                alert('You have checked in!');
+            });
         });
     </script>
 </body>
