--- a/bar_landing_page.html
+++ b/bar_landing_page.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,6 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <header>
         <button class="back-button" onclick="history.back()">&lt;</button>
@@ -51,6 +49,21 @@
             menuContent.style.display = menuContent.style.display === 'block' ? 'none' : 'block';
         }
 
+        async function fetchAIRecommendation(preferences) {
+            const response = await fetch(
+                'https://noggin.rea.gent/shy-seahorse-2573',
+                {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': 'Bearer rg_v1_y3dpo5ikwdvwl01k738fbar9l0j9rqrwapvu_ngk',
+                    },
+                    body: JSON.stringify(preferences),
+                }
+            );
+            return response.json();
+        }
+
         document.addEventListener('DOMContentLoaded', async function () {
             const bars = await fetch("./bars.json").then(response => response.json());
 
@@ -66,9 +79,7 @@
                 atmosphere: ['Casual', 'Elegant', 'Lively', 'Relaxed'],
                 music: ['Jazz', 'Rock', 'Pop', 'Acoustic'],
                 drinks: ['Cocktails', 'Beer', 'Wine', 'Whiskey'],
-                people: ['Friends', 'Singles', 'Groups', 'Couples'],
-                logo: ['pic'],
-                pplCount: ['45', '100', '20', '13', '2', '17', '165', '55', '1', '0']
+                people: ['Friends', 'Singles', 'Groups', 'Couples']
             };
 
             function displayBars(barsToDisplay) {
@@ -84,14 +95,24 @@
                 });
             }
 
-            function filterBars() {
+            async function filterBars() {
                 const selectedOption = filterOptions.value;
                 const selectedValue = filterValues.querySelector('select')?.value;
 
-                const filteredBars = bars.filter(bar => {
-                    return !selectedOption || !selectedValue || bar[selectedOption] === selectedValue;
-                });
-                displayBars(filteredBars);
+                if (selectedOption && selectedValue) {
+                    const preferences = {
+                        [selectedOption]: selectedValue
+                    };
+                    const recommendedBar = await fetchAIRecommendation(preferences);
+                    
+                    console.log('Preferences:', JSON.stringify(preferences)); // Ensure preferences are shown correctly
+                    console.log('Recommended Bar:', recommendedBar); // Log the recommended bar
+
+                    const filteredBars = bars.filter(bar => bar.name === recommendedBar.name);
+                    displayBars(filteredBars);
+                } else {
+                    displayBars(bars);
+                }
             }
 
             function populateFilterValues(option) {
