--- a/profile.html
+++ b/profile.html
@@ -143,14 +143,17 @@
 </head>
 <body>
 <header>
-    <button class="back-button" onclick="history.back()">&lt;</button>
-    <h1>Profile</h1>
-    <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
-    <div class="menu-content" id="menuContent">
-        <a href="faq.html">FAQs</a>
-        <a href="mission.html">Mission</a>
-    </div>
-</header>
+        <button class="back-button" onclick="history.back()">&lt;</button>
+        <h1>Over Drinks</h1>
+        <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
+        <div class="menu-content" id="menuContent">
+            <a href="bar_landing_page.html">Home</a>
+            <a href="profile.html">Profile</a>
+            <a href="settings.html">Settings</a>
+            <a href="faq.html">FAQs</a>
+            <a href="mission.html">Mission</a>
+        </div>
+    </header>
 <div class="profile-container">
     <h2 class="text-center">Profile</h2>
     <form id="datingInfoForm">
