--- a/UserList.html
+++ b/UserList.html
@@ -70,6 +70,11 @@
 </div>
     
 <script>
+    window.onload = (event) => {
+        if (localStorage.getItem("photo")) {
+          document.getElementById("currentUserImg").src = localStorage.getItem("photo");
+        }
+    }
     const currentUserProfile = {
         name: "Alex",
         img: "ProfileAlex.jpg", // Add the current user image here
