--- a/profile.html
+++ b/profile.html
@@ -143,17 +143,14 @@
 </head>
 <body>
 <header>
-        <button class="back-button" onclick="history.back()">&lt;</button>
-        <h1>Over Drinks</h1>
-        <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
-        <div class="menu-content" id="menuContent">
-            <a href="bar_landing_page.html">Home</a>
-            <a href="profile.html">Profile</a>
-            <a href="settings.html">Settings</a>
-            <a href="faq.html">FAQs</a>
-            <a href="mission.html">Mission</a>
-        </div>
-    </header>
+    <button class="back-button" onclick="history.back()">&lt;</button>
+    <h1>Profile</h1>
+    <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
+    <div class="menu-content" id="menuContent">
+        <a href="faq.html">FAQs</a>
+        <a href="mission.html">Mission</a>
+    </div>
+</header>
 <div class="profile-container">
     <h2 class="text-center">Profile</h2>
     <form id="datingInfoForm">
@@ -281,6 +278,9 @@
 </div>
 <script>
     window.onload = (event) => {
+        if (localStorage.getItem("photo")) {
+          document.getElementById("profile-pic").src = localStorage.getItem("photo");
+        }
         if (localStorage.getItem("name")) document.getElementById("name").value = localStorage.getItem("name");
         if (localStorage.getItem("gender")) document.getElementById("gender").value = localStorage.getItem("gender");
         if (localStorage.getItem("age")) document.getElementById("age").value = localStorage.getItem("age");
