--- a/LoginScreen2.html
+++ b/LoginScreen2.html
@@ -21,7 +21,7 @@
         </div>
     </header>
     <div class="login-container">
-        <img src="Logo.png" alt="Over Drinks Logo" class="logo">
+        <img src="Logo.png" alt="Over Drinks Logo" id="logo">
         <h2 class="text-center">Login</h2>
         <form id="loginForm">
             <div class="form-group">
