--- a/LoginScreen2.html
+++ b/LoginScreen2.html
@@ -32,7 +32,7 @@
             <button type="submit" class="btn-custom">Login</button>
         </form>
         <div class="text-center">
-            <a href="create_profile.html">Create Account</a>
+            <a href="createAccount.html">Create Account</a>
         </div>
         <div class="text-center">
             <a href="ForgotPass.html">Forgot Username/Password</a> <!-- Added link -->
