--- a/create_profile.html
+++ b/create_profile.html
@@ -4,142 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Your Profile</title>
-    <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        html, body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-        }
-
-        body {
-            background-image: url('background.jpeg'); /* Use the actual path to your image */
-            background-size: cover; /* Ensure the image covers the entire background */
-            background-position: center; /* Center the background image */
-            background-repeat: no-repeat; /* Prevent the background image from repeating */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            padding-top: 60px; /* To avoid content behind fixed header */
-        }
-
-        .profile-container {
-            width: 100%;
-            max-width: 400px;
-            padding: 20px;
-            background-color: rgba(255, 255, 255, 0.5); /* More transparent */
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .card {
-            margin: 0 auto;
-        }
-
-        .profile-name-input {
-            margin-bottom: 16px;
-        }
-
-        .profile-card {
-            max-width: 400px;
-        }
-
-        .modal-footer {
-            display: flex;
-            justify-content: center;
-        }
-
-        #profile-pic {
-            width: 100px;
-            height: 100px;
-            border-radius: 6px;
-            margin: 12px auto;
-            display: block;
-        }
-
-        #video {
-            width: 100%;
-            background-color: black;
-        }
-
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 20px;
-            background-color: #333;
-            color: white;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            z-index: 1000;
-        }
-
-        header h1 {
-            font-size: 24px;
-            margin: 0;
-            flex-grow: 1;
-            text-align: center;
-        }
-
-       .back-button, .menu-button {
-    background: none;
-    border: none;
-    color: white;
-    font-size: 24px;
-    cursor: pointer;
-}
-
-        .menu-content {
-            display: none;
-            position: absolute;
-            top: 100%;
-            right: 0;
-            background-color: #333;
-            width: 100px;
-        }
-
-        .menu-content a {
-            color: white;
-            text-decoration: none;
-            display: block;
-            padding: 10px 20px;
-        }
-
-        .menu-content a:hover {
-            background-color: #575757;
-        }
-
-        .tag-container {
-            display: flex;
-            flex-wrap: wrap;
-            margin-bottom: 10px;
-        }
-
-        .tag {
-            background-color: #007bff;
-            color: white;
-            border-radius: 4px;
-            padding: 5px 10px;
-            margin: 5px;
-            cursor: pointer;
-        }
-
-        .tag.selected {
-            background-color: #0056b3;
-        }
-
-        .category {
-            width: 100%;
-            font-weight: bold;
-            margin-top: 10px;
-            margin-bottom: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
@@ -278,9 +144,6 @@
 </div>
 <script>
     window.onload = (event) => {
-        if (localStorage.getItem("photo")) {
-          document.getElementById("profile-pic").src = localStorage.getItem("photo");
-        }
         if (localStorage.getItem("name")) document.getElementById("name").value = localStorage.getItem("name");
         if (localStorage.getItem("gender")) document.getElementById("gender").value = localStorage.getItem("gender");
         if (localStorage.getItem("age")) document.getElementById("age").value = localStorage.getItem("age");
@@ -380,7 +243,6 @@
         menuContent.style.display = menuContent.style.display === "block" ? "none" : "block";
     }
 </script>
-<!-- Bootstrap JS and dependencies -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
