--- a/UserList.html
+++ b/UserList.html
@@ -87,19 +87,19 @@
     };
 
      const otherUserProfiles = [
-        { name: "Taylor", bio: "Enjoys reading and gaming.", interests: ["Reading", "Gaming", "Cooking"], profession: "Writer", img: "Profile1.jpg", age: 28 },
-        { name: "Jamie", bio: "Likes hiking and cooking.", interests: ["Hiking", "Cooking", "Music"], profession: "Graphic Designer", img: "Profile2.jpg", age: 30 },
-        { name: "Morgan", bio: "Travels often and enjoys music.", interests: ["Hiking", "Reading", "Cooking"], profession: "Data Scientist", img: "Profile3.jpg", age: 27 },
-        { name: "James" , bio: "Likes watching movies and running", interests:["Movies" , "Running" , "Fitness"], profession: "Business Analyst", img: "Profile1.jpg", age: 32 },
-        { name: "Cameron", bio: "Tech enthusiast and coder.", interests: ["Programming", "Gaming", "Music"], profession: "Software Developer", img: "Profile1.jpg", age: 25 },
-        { name: "Charlie", bio: "Fitness freak and health coach.", interests: ["Fitness", "Cooking", "Meditation"], profession: "Personal Trainer", img: "Profile2.jpg", age: 29 },
-        { name: "Peyton", bio: "Creative artist and designer.", interests: ["Painting", "Design", "Photography"], profession: "Graphic Designer", img: "Profile1.jpg", age: 26 }
+        { name: "Taylor", bio: "Enjoys reading and gaming.", interests: ["Reading", "Gaming", "Cooking"], profession: "Writer", img: "Profile1.png", age: 28 },
+        { name: "Jamie", bio: "Likes hiking and cooking.", interests: ["Hiking", "Cooking", "Music"], profession: "Graphic Designer", img: "Profile3.png", age: 30 },
+        { name: "Morgan", bio: "Travels often and enjoys music.", interests: ["Hiking", "Reading", "Cooking"], profession: "Data Scientist", img: "Profile4.png", age: 27 },
+        { name: "James" , bio: "Likes watching movies and running", interests:["Movies" , "Running" , "Fitness"], profession: "Business Analyst", img: "Profile5.png", age: 32 },
+        { name: "Cameron", bio: "Tech enthusiast and coder.", interests: ["Programming", "Gaming", "Music"], profession: "Software Developer", img: "Profile2.png", age: 25 },
+        { name: "Charlie", bio: "Fitness freak and health coach.", interests: ["Fitness", "Cooking", "Meditation"], profession: "Personal Trainer", img: "Profile6.png", age: 29 },
+        { name: "Peyton", bio: "Creative artist and designer.", interests: ["Painting", "Design", "Photography"], profession: "Graphic Designer", img: "Profile7.png", age: 26 }
     ];
 
     const friendUserProfiles = [
-        { name: "Robin", bio: "Nature lover and explorer.", interests: ["Hiking", "Nature", "Bird Watching"], profession: "Environmental Scientist", img: "Profile2.jpg", age: 31 },
-        { name: "Jordan", bio: "Tech enthusiast and startup founder.", interests: ["Programming", "Startups", "Gaming"], profession: "Entrepreneur", img: "Profile3.jpg", age: 28 },
-        { name: "Alexis", bio: "Musician and artist.", interests: ["Music", "Art", "Writing"], profession: "Musician", img: "Profile1.jpg", age: 24 }
+        { name: "Robin", bio: "Nature lover and explorer.", interests: ["Hiking", "Nature", "Bird Watching"], profession: "Environmental Scientist", img: "Profile10.png", age: 31 },
+        { name: "Jordan", bio: "Tech enthusiast and startup founder.", interests: ["Programming", "Startups", "Gaming"], profession: "Entrepreneur", img: "Profile9.png", age: 28 },
+        { name: "Alexis", bio: "Musician and artist.", interests: ["Music", "Art", "Writing"], profession: "Musician", img: "Profile8.png", age: 24 }
     ];
 
     const heartState = {}; // To track heart icon state
