--- a/MatchesList.html
+++ b/MatchesList.html
@@ -23,8 +23,8 @@
         </div>
     </header>
     <div class="container">
-        <div class="profile" data-name="Morgan" data-description="Travels often and enjoys music." data-img="Profile3.jpg">
-            <img src="Profile3.jpg" alt="Morgan's Photo">
+        <div class="profile" data-name="Morgan" data-description="Travels often and enjoys music." data-img="Profile4.png">
+            <img src="Profile4.png" alt="Morgan's Photo">
             <div class="profile-description">
                 <h2>Morgan</h2>
                 <p>Travels often and enjoys music.</p>
